*Mensagens de Sucesso e erro adicionadas na view lista_eventos_inativos *Adicionado aos casos de teste de excluir com sucesso e erro ao excluir os testes de flash message

--- a/aplicacao/contest/src/main/resources/messages/messages.properties
+++ b/aplicacao/contest/src/main/resources/messages/messages.properties
@@ -1,2 +1,4 @@
 LOGIN_INVALIDO=Usuário e/ou senha inválidos
 LOGOUT_SUCESSO=Sua sessão foi finalizada
+EVENTO_INATIVO_EXCLUIDO_SUCESSO=Evento inativo excluido com sucesso
+EVENTO_INATIVO_EXCLUIDO_ERRO=Evento não encontrado
