Funcionalidade Adicionar Evento integrado com View e testes funcionando

--- a/aplicacao/contest/src/main/resources/messages/messages.properties
+++ b/aplicacao/contest/src/main/resources/messages/messages.properties
@@ -1,2 +1,5 @@
 LOGIN_INVALIDO=Usuário e/ou senha inválidos
 LOGOUT_SUCESSO=Sua sessão foi finalizada
+ORGANIZADOR_VAZIO_ERROR=O organizador do evento deve ser informado
+PESSOA_NAO_ENCONTRADA=Pessoa nao encontrada
+NOME_EVENTO_VAZIO_ERROR=O nome do evento não pode ser vazio
